<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">对话</string>
    <string name="title_wechat">微信</string>
    <string name="title_qq">QQ</string>
    <string name="title_alipay">支付宝</string>
    <string name="title_friend">朋友圈</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_discard">Discard</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="share_title">分享对话</string>
    <string name="share_error">抱歉，您没有安装适合分享图片的应用</string>


    <string name="default_username">王语嫣</string>

    <string name="qq_msg_bar_default">消息(99+)</string>
    <string name="qq_msg_bar_status">手机在线-WiFi</string>

    <string name="preference_file_key">com.chen.talking.PREFERENCE_FILE_KEY</string>
    <string name="last_ad_time">Last_Ad_TIME</string>

    <string name="friend_defalt_content">我多么希望，有一个门口。早晨，阳光照在草上。我们站着，抚着自己的门窗。草在结它的种子，风在摇它的叶子，我们站着不说话，就十分美好。</string>

    <string name="friend_defalt_time">3小时前</string>

    <string name="friend_love_friends">段誉,乔峰,星宿老仙</string>


    <string name="ali_default_hint">&#160;&#165;&#160;0.00元</string>
</resources>
